@@ -121,6 +121,7 @@ ASMCOMP=\
   asmcomp/flambda_to_clambda.cmo \
   asmcomp/import_approx.cmo \
   asmcomp/un_anf.cmo \
+  asmcomp/afl_instrument.cmo \
   asmcomp/strmatch.cmo asmcomp/cmmgen.cmo \
   asmcomp/printmach.cmo asmcomp/selectgen.cmo \
   asmcomp/spacetime_profiling.cmo asmcomp/selection.cmo \
