@@ -156,3 +156,5 @@ val libunwind_link_flags : string
 
 val safe_string: bool
         (* Whether the compiler was configured with -safe-string *)
+val afl_instrument : bool
+        (* Whether afl-fuzz instrumentation is generated by default *)
